# pwdgenz

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: release.yml
src/: main.rs
