[package]
name = "pwdgenz"
version = "0.1.0"
edition = "2021"
authors = ["Vadim Kerbs <opensource@kerbs.dev>"]
repository = "https://github.com/KerbsOpenSource/pwdgenz"
readme = "README.md"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_core = "0.6.4"