[package]
name = "pwdgenz"
version = "0.1.5"
edition = "2021"
authors = ["Vadim Kerbs <opensource@kerbs.dev>"]
repository = "https://github.com/KerbsOpenSource/pwdgenz"
description = "Command line password generator"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_core = "0.6.4"
clap = { version = "4.4.18", features = ["derive"] }
arboard = "3.3.0"

[profile.release]
strip = true
lto = true
panic = "abort"